Prevent sidebar controls overlapping scrollbar in PDFs
When the sidebar is closed or there is not enough room to show the
sidebar alongside the PDF content, reserve space for the sidebar's
toolbar and bucket bar. This fixes an issue where the sidebar's controls
would overlap the document's scrollbar, making scrolling the PDF less
convenient, especially in long documents.

This also removes the need for some CSS overrides that reposition
elements in PDF.js's toolbar. By ensuring that the `<body>` does not
overlap the sidebar controls, the PDF.js toolbar which is contained
within the body doesn't either.

Fixes #3759

--- a/src/styles/annotator/pdfjs-overrides.scss
+++ b/src/styles/annotator/pdfjs-overrides.scss
@@ -21,15 +21,3 @@
 .textLayer .highlight.selected {
   background-color: rgba(0, 100, 0, 0.5);
 }
-
-// Make sure sidebar bucket bar/toolbar don't obscure PDF JS tools menu
-// This gives enough room for `.annotator-frame-button` which uses a hard-coded
-// width of 30px
-#toolbarViewer {
-  margin-right: 30px;
-}
-
-// The affordance is not needed in side-by-side mode
-.hypothesis-side-by-side #toolbarViewer {
-  margin-right: 0;
-}
